add houses, spawn gnomes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <div class="footer overlay">
+      <button id="drop_house">Add House</button>
+      <!--<button id="drop_rock" disabled>Add Rock</button> -->
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
