rework select box to be more reliable

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="selectbox"></div>
     <div class="footer overlay">
       <button id="drop_house">Add House</button>
       <!--<button id="drop_rock" disabled>Add Rock</button> -->
