tune number of skeletons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="selectbox"></div>
     <div class="footer overlay">
       <button id="drop_house">Add House</button>
+      <p>Right Mouse to drag/select, Left mouse to attack or move to/defend. Place Gnome Houses to spawn more gnomes!</p>
       <!--<button id="drop_rock" disabled>Add Rock</button> -->
     </div>
     <script type="module" src="/src/main.js"></script>
