added goal and game over

--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
   <body>
     <div id="root"></div>
     <div id="selectbox"></div>
+    <div id="cookpot_overlay">
+      <div id="cookpot_health"></div>
+    </div>
+    <div id="intro">
+      <div>
+        <h1>Gnomageddon</h1>
+        <p>The Gnomes have been busily preparing their Grandma's mushroom soup recipe, but those nasty ☠️☠️ skellies from the nearby graveyard really want some. More skellies are arriving <strong>Every 10 Seconds</strong>!</p>
+        <p>Control your Gnomes by selecting with RMB and clicking where to go to defend the soup! Drop new Gnome houses to recruit more Gnomes <strong>Every 10 Seconds</strong></p>
+        <button id="begin">OK Let's Do This!</button>
+        <p>Made by <a href="https://github.com/kmooney">Kevin</a>, <a href="https://github.com/nikolajbaer">Nikolaj</a>, and Harriet for <a href="https://ldjam.com/events/ludum-dare/51">Ludum Jam 51</a></p>
+      </div>
+    </div>
+    <div id="gameover">
+      <div>
+        <h1>Game Over</h1>
+        <p>Well I hope you had fun sending your Gnome Armies around! Too bad about Grandma's 🍄 soup!</p>
+        <p><strong>Thanks For Playing!</strong></p>
+        <p>🍄🍄🍄💀💀💀❤️❤️❤️🎮🎮🎮</p>
+        <button onclick="window.location = window.location">Play Again</button>
+        <p><a href="https://github.com/kmooney">Kevin</a> | <a href="https://github.com/nikolajbaer">Nikolaj</a> | Harriet</p>
+      </div>
+    </div>
     <div class="footer overlay">
       <button id="drop_house">Add House</button>
       <p>Right Mouse to drag/select, Left mouse to attack or move to/defend. Place Gnome Houses to spawn more gnomes!</p>
