--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
         <p>The Gnomes have been busily preparing their Grandma's mushroom soup recipe, but those nasty ☠️☠️ skellies from the nearby graveyard really want some. More skellies are arriving <strong>Every 10 Seconds</strong>!</p>
         <p>Control your Gnomes by selecting with RMB and clicking where to go to defend the soup! Drop new Gnome houses to recruit more Gnomes <strong>Every 10 Seconds</strong></p>
         <button id="begin">OK Let's Do This!</button>
-        <p>Made by <a href="https://github.com/kmooney">Kevin</a>, <a href="https://github.com/nikolajbaer">Nikolaj</a>, and Harriet for <a href="https://ldjam.com/events/ludum-dare/51">Ludum Jam 51</a></p>
+        <p>Made by <a href="https://github.com/kmooney">Kevin</a>, <a href="https://github.com/nikolajbaer">Nikolaj</a>, and Harriet for <a href="https://ldjam.com/events/ludum-dare/51">Ludum Jam 51</a> (<a href="https://github.com/nikolajbaer/ld51">source code for the curious</a>)</a></p>
       </div>
     </div>
     <div id="gameover">
       <div>
         <h1>Game Over</h1>
         <p>Well I hope you had fun sending your Gnome Armies around! Too bad about Grandma's 🍄 soup!</p>
+        <p>You made it <span id="gametime"></span>!</p>
         <p><strong>Thanks For Playing!</strong></p>
         <p>🍄🍄🍄💀💀💀❤️❤️❤️🎮🎮🎮</p>
         <button onclick="window.location = window.location">Play Again</button>
