make sound optional

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
       <div>
         <h1>Gnomageddon</h1>
         <p>The Gnomes have been busily preparing their Grandma's mushroom soup recipe, but those nasty ☠️☠️ skellies from the nearby graveyard really want some. More skellies are arriving <strong>Every 10 Seconds</strong>!</p>
-        <p>Control your Gnomes by selecting with RMB and clicking where to go to defend the soup! Drop new Gnome houses to recruit more Gnomes <strong>Every 10 Seconds</strong></p>
+        <ul>
+          <li>Right Mouse Button / Drag to select Gnomes</li>
+          <li>Left Click to target/move</li>
+          </li>Drop new Gnome houses to recruit more Gnomes <strong>Every 10 Seconds</strong></li>
+          <li>Hold Shift and scroll wheel or right mouse to rotate/zoom world</li>
+        </ul>
+        <p><input id="sound" type="checkbox" checked/> Play Sound (music, grunts, etc)</p>
         <button id="begin">OK Let's Do This!</button>
         <p>Made by <a href="https://github.com/kmooney">Kevin</a>, <a href="https://github.com/nikolajbaer">Nikolaj</a>, and Harriet for <a href="https://ldjam.com/events/ludum-dare/51">Ludum Jam 51</a> (<a href="https://github.com/nikolajbaer/ld51">source code for the curious</a>)</a></p>
       </div>
